objects/Client_Action_Plan__c.object
<CustomObject>
    <fields>
        <fullName>AM_Last_Touch_with_Key_Decision_Maker__c</fullName>
        <description>The date the AM last had an interaction with the key DM.</description>
        <inlineHelpText>DO NOT EDIT - The date the AM last had an interaction with the key DM.</inlineHelpText>
        <label>AM Last Touch with Key Decision Maker</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AM_STM_Client_Assessment__c</fullName>
        <description>This is the initial assessment of the client based on the collective knowledge of the AM and STM.</description>
        <inlineHelpText>This is the initial assessment of the client based on the collective knowledge of the AM and STM.</inlineHelpText>
        <label>AM/STM Client Assessment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AM_s_Connectivity_Current__c</fullName>
        <inlineHelpText>Update as needed.</inlineHelpText>
        <label>AM's Connectivity (Current)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Super Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AMs_Connectivity_Baseline__c</fullName>
        <description>Is the AM considered a trusted advisor?  Will the client accept what they are told by the AM based on trust and faith alone?  Does the client proactively call the AM to solicit advice on business or personnel decisions?  Is the client consistently open and transparent with the AM on changes to their business?</description>
        <inlineHelpText>DO NOT EDIT - Is the AM considered a trusted advisor?  Will the client accept what they are told by the AM based on trust and faith alone?  Does the client proactively call the AM to solicit advice on business or personnel decisions?</inlineHelpText>
        <label>AM's Connectivity (Baseline)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Super Green</fullName>
                </value>
                <value>
                    <fullName>No Data Available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <label>Account Manager</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Angie Nakasone</fullName>
                </value>
                <value>
                    <fullName>Angie Wideman</fullName>
                </value>
                <value>
                    <fullName>Aulani Kekuna</fullName>
                </value>
                <value>
                    <fullName>Cathy Painter</fullName>
                </value>
                <value>
                    <fullName>Darren Ebisu</fullName>
                </value>
                <value>
                    <fullName>Jordan Wong</fullName>
                </value>
                <value>
                    <fullName>Larry Hubbell</fullName>
                </value>
                <value>
                    <fullName>Mark Shiman</fullName>
                </value>
                <value>
                    <fullName>Tony Guzzardo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Client Action Plans</relationshipLabel>
        <relationshipName>Client_Action_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Client_Goals__c</fullName>
        <description>What are this company's 3-5 key strategic goals or priorities?</description>
        <inlineHelpText>What are this company's 3-5 key strategic goals or priorities?</inlineHelpText>
        <label>Client Goals</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <externalId>true</externalId>
        <label>Client ID</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_s_PSH_Value_Perception_Current__c</fullName>
        <inlineHelpText>Update as needed.</inlineHelpText>
        <label>Client's PSH Value Perception (Current)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Super Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clients_PSH_Value_Perception_Baseline__c</fullName>
        <description>Do we provide consistently great service to this client?  Do we have their trust and confidence to consistently perform to their standards?  Are they loyal to us?  Do they refer other business to us?  Do they perceive value in what we do for them?</description>
        <inlineHelpText>DO NOT EDIT - Do we provide consistently great service?  Do we have their trust and confidence to consistently perform to their standards?  Are they loyal to us?  Do they refer other business to us?  Do they perceive value in what we do for them?</inlineHelpText>
        <label>Client's PSH Value Perception (Baseline)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Super Green</fullName>
                </value>
                <value>
                    <fullName>No Data Available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Last_AM_STM_Review__c</fullName>
        <description>This is the last date the AM and STM met and reviewed the status of the client's action plan.</description>
        <inlineHelpText>Description of interaction and with whom.</inlineHelpText>
        <label>Date of Last AM/STM Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Go_Green_Account_Action_Plan__c</fullName>
        <description>What specific steps does ProService need to take to accomplish the Success Criteria?</description>
        <inlineHelpText>What specific steps does ProService need to take to accomplish the Success Criteria?</inlineHelpText>
        <label>Go Green Account Action Plan</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Key_Contact__c</fullName>
        <label>Key Executive Contact</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Decision_Maker_Goals__c</fullName>
        <description>What are the 3-5 most important priorities for your key executive client at this company?</description>
        <inlineHelpText>What are the 3-5 most important priorities for your key executive client at this company?</inlineHelpText>
        <label>Key Decision Maker Goals</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes_from_All_AM_STM_Reviews__c</fullName>
        <description>The cumulative notes from all of the AM/STM reviews of the client's action plan. The most recent should be at the top.</description>
        <inlineHelpText>The cumulative notes from all of the AM/STM reviews of the client's action plan. The most recent should be at the top.</inlineHelpText>
        <label>Notes from All AM/STM Reviews</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_on_AM_Last_Touch_with_Key_DM__c</fullName>
        <description>Description of interaction and with whom.</description>
        <inlineHelpText>DO NOT EDIT - Description of interaction and with whom.</inlineHelpText>
        <label>Notes on AM Last Touch with Key DM</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Our_Clients_Major_Challenge__c</fullName>
        <description>How would you describe the central challenge the Account Manager faces in developing and managing this client relationship?</description>
        <inlineHelpText>How would you describe the central challenge the Account Manager faces in developing and managing this client relationship?</inlineHelpText>
        <label>Our Client's Major Challenge</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Overall_Action_Plan_Status__c</fullName>
        <description>What is the overall status to hit the goal fo Surprising and Delighting this client?</description>
        <inlineHelpText>What is the overall status to hit the goal fo Surprising and Delighting this client?</inlineHelpText>
        <label>Overall Action Plan Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>AM/STM Initial Meeting Held</fullName>
                </value>
                <value>
                    <fullName>Action Plan Drafted</fullName>
                </value>
                <value>
                    <fullName>Action Plan Being Executed - Trending Green</fullName>
                </value>
                <value>
                    <fullName>Action Plan Being Executed - Trending Yellow</fullName>
                </value>
                <value>
                    <fullName>Action Plan Being Executed - Trending Red</fullName>
                </value>
                <value>
                    <fullName>STUCK</fullName>
                </value>
                <value>
                    <fullName>Action Plan Complete</fullName>
                </value>
                <value>
                    <fullName>No Action Plan Needed</fullName>
                </value>
                <value>
                    <fullName>No Action Plan Needed - Related Account</fullName>
                </value>
                <value>
                    <fullName>Action Plan Closed by CIS (No Longer PFK)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PFK_Quarter__c</fullName>
        <label>PFK Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2015 - Q2</fullName>
                </value>
                <value>
                    <fullName>2015 - Q4</fullName>
                </value>
                <value>
                    <fullName>2016 - Q1</fullName>
                </value>
                <value>
                    <fullName>2016 - Q2</fullName>
                </value>
                <value>
                    <fullName>2016 - Q3</fullName>
                </value>
                <value>
                    <fullName>2016 - Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Team_Manager__c</fullName>
        <label>Service Team Manager</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lisa Tilton</fullName>
                </value>
                <value>
                    <fullName>Melanie Ching</fullName>
                </value>
                <value>
                    <fullName>Richie Wessman</fullName>
                </value>
                <value>
                    <fullName>Tami Minami</fullName>
                </value>
                <value>
                    <fullName>Tempsy Quach</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Success_Criteria__c</fullName>
        <description>What would taking this client to Green or Super Green look like for the AM? Who would they need to have a relationship with and what would that look like? What pain points would ProService have to remove?</description>
        <inlineHelpText>What would taking this client to Green or Super Green look like for the AM? Who would they need to have a relationship with and what would that look like? What pain points would ProService have to remove?</inlineHelpText>
        <label>Success Criteria</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Client Action Plan</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>Client Action Plan #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Action Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>